# frameiq

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
core/: extractor.py  job_manager.py  llm.py  rag_engine.py  summarize.py  transcriber.py  translator.py  vector_store.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: AuroraBackground.jsx  ChatInterface.jsx  Explanation.jsx  FAQ.jsx  Footer.jsx  InputForm.jsx  ParticleField.jsx  ProgressStages.jsx  ResultsTabs.jsx  Skeleton.jsx
frontend/lib/: ThemeContext.js  api.js
routes/: video.py
utils/: audio_processor.py
