[project]
name = "video-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "deep-translator>=1.11.4",
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]
